--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@ Login to Get My Tattoo
 		<form class="col col-md-6 offset-md-1 sign-panel" action="{{ url_for('login') }}" method="POST">
             <legend class="subtitle">Hello, artist!
             <br>Log In to your profile</legend>
-			<div class="form-group">
+			<div class="form-group scroll">
 				<label for="username" class="d-none">Username</label>
 				<div class="input-group input-group-sm">
 					<div class="input-group-prepend">
@@ -20,7 +20,7 @@ Login to Get My Tattoo
 			    </div>
 				</div>
 			
-            <div class="form-group">
+            <div class="form-group scroll">
 				<label for="password" class="d-none">Password</label>
                 <div class="input-group input-group-sm">
 					<div class="input-group-prepend">
