--- a/templates/artist-page.html
+++ b/templates/artist-page.html
@@ -9,15 +9,15 @@
 
     <div class="container profile-container">
         <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-4 center">
+            <div class="col-sm-12 col-md-6 col-lg-4 center scroll">
                 <img src="{{ artist.profile_url }}" class="img-panel profile-pic" alt="{{ artist.artist_name }}'s profile picture'">
             </div>
             <div class="col-sm-12 col-md-6 col-lg-8 information-section">
                 <div class="row information-row">
-                    <div class="col-sm-12 col-lg-6 name-profile center-tablet">
+                    <div class="col-sm-12 col-lg-6 name-profile center-tablet scroll">
                         {{ artist.artist_name }}
                     </div>
-                    <div class="col-sm-12 col-lg-6 icon-section center-tablet">
+                    <div class="col-sm-12 col-lg-6 icon-section center-tablet scroll">
                         <a href="tel:{{ artist.phone }}" class= "icon-profile link"><i class="fas fa-phone"></i></a>
                         <a href="mailto:{{ artist.email }}" class="icon-profile link"><i class="fas fa-at"></i></a>
                         <a href="{{ artist.facebook }}" class="icon-profile link" target="_blank" rel="noopener"><i class="fab fa-facebook"></i></a>
@@ -25,22 +25,23 @@
                     </div>
                 </div>
                 <div class="row address-row">
-                    <div class="col-sm-12 center-tablet">
+                    <div class="col-sm-12 center-tablet scroll">
                         <p class="text-profile">You can find me at:</p>
                         <address class="text-profile font-italic">{{ artist.address }}</address>
                         <p class="text-profile font-italic">{{ artist.city }}</p>
+                        <p class="text-profile font-italic">{{ artist.state }}</p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-sm-12">
-                        <p class="text-profile bio"><strong>Bio:</strong> <br>{{ artist.bio }}</p>
-                        <p class="text-profile"><strong>Languages spoken:</strong> {{ artist.languages }}</p>
-                        <p class="text-profile"><strong>Tattoo styles:</strong> {{ artist.style }}</p>
+                        <p class="text-profile bio scroll"><strong>Bio:</strong> <br>{{ artist.bio }}</p>
+                        <p class="text-profile scroll"><strong>Languages spoken:</strong> {{ artist.languages }}</p>
+                        <p class="text-profile scroll"><strong>Tattoo styles:</strong> {{ artist.style }}</p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row scroll">
             <div class="col-sm-12 col-md-6 col-lg-2">
                 <img src="{{ artist.photo_1 }}" class="image-profile" alt="">
             </div>
