--- a/templates/artists.html
+++ b/templates/artists.html
@@ -25,27 +25,27 @@ Artists
 
 
 <div class="row">
-    <div class="col-sm-12">
+    <div class="col-sm-12 scroll">
         <h3 class="subtitle center">Need some ideas? Explore some different styles!</h3>
     </div>
 </div>
 
 <div class="card-deck ideas">
-    <div class="card">
+    <div class="card scroll">
         <img src="{{ url_for('static', filename='images/manga.jpg') }}" class="card-img-top" alt="Manga style tattoo">
         <div class="card-body">
             <h5 class="card-title">Manga/Anime</h5>
             <a href="{{ url_for('show_manga') }}" class="btn btn-dark btn-form">See All</a>
         </div>
     </div>
-    <div class="card">
+    <div class="card scroll">
         <img src="{{ url_for('static', filename='images/nordic.jpg') }}" class="card-img-top" alt="Nordic style tattoo">
         <div class="card-body">
             <h5 class="card-title">Nordic Style</h5>
             <a href="{{ url_for('show_nordic') }}" class="btn btn-dark btn-form">See All</a>
         </div>
     </div>
-    <div class="card">
+    <div class="card scroll">
         <img src="{{ url_for('static', filename='images/japanese.jpg') }}" class="card-img-top"
             alt="Japanese style tattoo">
         <div class="card-body">
@@ -53,7 +53,7 @@ Artists
             <a href="{{ url_for('show_japanese') }}" class="btn btn-dark btn-form">See All</a>
         </div>
     </div>
-    <div class="card">
+    <div class="card scroll">
         <img src="{{ url_for('static', filename='images/realism.jpg') }}" class="card-img-top"
             alt="Realistic style tattoo">
         <div class="card-body">
@@ -66,7 +66,7 @@ Artists
 
 
 <div class="row">
-    <div class="col-sm-12 center">
+    <div class="col-sm-12 center scroll">
         <h3 class="subtitle center">Or simply search our database</h3>
         <form class="form-inline search-form" action="{{ url_for('search') }}" method="POST">
             <input class="search-box" type="search" placeholder=" Search" name="query" id="query" required>
@@ -79,7 +79,7 @@ Artists
 
 
 <div class="row">
-    <div class="col-sm-12">
+    <div class="col-sm-12 scroll">
         <h3 class="subtitle center">Last added</h3>
     </div>
 </div>
@@ -93,22 +93,22 @@ Artists
             <div class="col col-sm-12 col-lg-8">
                 <div class="row panel">
                     <div class="col-sm-12 col-md-6">
-                        <div class="card" style="width: 100%;">
+                        <div class="card scroll" style="width: 100%;">
                             <img class="card-img-top img-panel" src="{{ artist.profile_url }}"
                                 alt="Profile picture for {{ artist.artist_name }}">
                         </div>
                     </div>
                     <div class="d-none d-md-block col-md-6">
-                        <h5 class="card-title">{{ artist.artist_name }}</h5>
-                        <p class="card-text">{{ artist.bio }}</p>
+                        <h5 class="card-title scroll">{{ artist.artist_name }}</h5>
+                        <p class="card-text scroll">{{ artist.bio }}</p>
                         <a href="{{ url_for('show_artist', artist_id=artist._id) }}" class="link">Go to
                             {{ artist.artist_name }}'s page</a>
                     </div>
                 </div>
                 <div class="row d-sm-block d-md-none">
                     <div class="col-sm-12 d-sm-block d-md-none">
-                        <h5 class="card-title">{{ artist.artist_name }}</h5>
-                        <p class="card-text">{{ artist.bio }}</p>
+                        <h5 class="card-title scroll">{{ artist.artist_name }}</h5>
+                        <p class="card-text scroll">{{ artist.bio }}</p>
                         <a href="{{ url_for('show_artist', artist_id=artist._id) }}" class="link">Go to
                             {{ artist.artist_name }}'s page</a>
                     </div>
@@ -116,7 +116,7 @@ Artists
             </div>
 
 <div class="col col-lg-4 d-none d-lg-block">
-            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div id="carouselExampleControls" class="carousel slide scroll" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="{{ artist.photo_1 }}" class="d-block w-100 img-panel" alt="...">
