--- a/templates/search.html
+++ b/templates/search.html
@@ -24,7 +24,7 @@ Artists search
                     <div class="d-none d-md-block col-md-6">
                         <h5 class="card-title scroll">{{ artist.artist_name }}</h5>
                         <p class="card-text scroll">{{ artist.bio }}</p>
-                        <a href="{{ url_for('show_artist', artist_id=artist._id) }}" class="link">Go to
+                        <a href="{{ url_for('show_artist', artist_id=artist._id) }}" class="link" target="_blank">Go to
                             {{ artist.artist_name }}'s page</a>
                     </div>
                 </div>
@@ -32,7 +32,7 @@ Artists search
                     <div class="col-sm-12 d-sm-block d-md-none">
                         <h5 class="card-title scroll">{{ artist.artist_name }}</h5>
                         <p class="card-text scroll">{{ artist.bio }}</p>
-                        <a href="{{ url_for('show_artist', artist_id=artist._id) }}" class="link">Go to
+                        <a href="{{ url_for('show_artist', artist_id=artist._id) }}" class="link" target="_blank">Go to
                             {{ artist.artist_name }}'s page</a>
                     </div>
                 </div>
