--- a/templates/register.html
+++ b/templates/register.html
@@ -6,38 +6,54 @@ Register to Get My Tattoo
 
 {% block content %}
 <div class="container background-image">
-	<div class="row">
-		<form class="col col-md-6 offset-md-1 sign-panel" action="{{ url_for('register') }}" method="POST">
+    <div class="row">
+        <form class="col col-md-6 offset-md-1 sign-panel needs-validation" action="{{ url_for('register') }}"
+            method="POST" novalidate>
             <legend class="subtitle">Hello, artist!
-            <br>Please register here</legend>
-			<div class="form-group scroll">
-				<label for="username" class="d-none">Username</label>
-				<div class="input-group input-group-sm">
-					<div class="input-group-prepend">
-						<span class="input-group-text"><i class="fas fa-user form-icon"></i></span>
-					</div>
-					<input type="text" class="form-control form-input" id="username" name="username" placeholder="Choose a username" pattern="^[a-zA-Z0-9]{5,20}$" required>
-			    </div>
-				</div>
-			
+                <br>Please register here</legend>
             <div class="form-group scroll">
-				<label for="password" class="d-none">Password</label>
+                <label for="username" class="d-none">Username</label>
                 <div class="input-group input-group-sm">
-					<div class="input-group-prepend">
-						<span class="input-group-text"><i class="fas fa-lock form-icon"></i></span>
-					</div>
-				<input type="password" class="form-control form-input" id="password" name="password" placeholder="Choose a password" minlength="5" maxlength="20" required>
-			</div>
+                    <div class="input-group-prepend">
+                        <span class="input-group-text"><i class="fas fa-user form-icon"></i></span>
+                    </div>
+                    <input type="text" class="form-control form-input" id="username" name="username"
+                        placeholder="Choose a username" pattern="^[a-zA-Z0-9]{5,20}$" required>
+                    <div class="valid-feedback feedback">
+                        Great!
+                    </div>
+                    <div class="invalid-feedback feedback">
+                        Choose a valid username. Only letters and numbers are accepted.
+                    </div>
+                </div>
             </div>
-            <button class="btn btn-light btn-block" type="submit"> <i class="fas fa-sign-in-alt form-icon text-muted"></i></button>
+
+            <div class="form-group scroll">
+                <label for="password" class="d-none">Password</label>
+                <div class="input-group input-group-sm">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text"><i class="fas fa-lock form-icon"></i></span>
+                    </div>
+                    <input type="password" class="form-control form-input" id="password" name="password"
+                        placeholder="Choose a password" minlength="5" maxlength="20" required>
+                    <div class="valid-feedback feedback">
+                        Great!
+                    </div>
+                    <div class="invalid-feedback feedback">
+                        Password should be between 5-20 chars.
+                    </div>
+                </div>
+            </div>
+            <button class="btn btn-light btn-block" type="submit"> <i
+                    class="fas fa-sign-in-alt form-icon text-muted"></i></button>
             <div class="row">
-            <div class="col-sm-12">
-                <p class="link-form">Already have an account? 
-                    <a href="{{ url_for('login') }}">Click here</a>
-                </p>
+                <div class="col-sm-12">
+                    <p class="link-form">Already have an account?
+                        <a href="{{ url_for('login') }}">Click here</a>
+                    </p>
+                </div>
             </div>
-        </div>
-		</form>
-	</div>
+        </form>
+    </div>
 </div>
 {% endblock %}
