--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,6 +28,14 @@ a.navbar-brand.logo, a.nav-link {
     color: gray;
 }
 
+.invalid-feedback{
+    color: #660022;
+}
+
+.valid-feedback{
+    color: #006644;
+}
+
 /* Typography */
 .logo, h2{
     font-family: "Montserrat", sans-serif;
@@ -82,6 +90,13 @@ label{
     font-size: 1.5rem;
     font-family: "Montserrat", sans-serif;
 }
+
+.feedback{
+    font-size: 1.5rem;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+}
+
 
 input.form-control{
     font-size: 1.5rem;
