--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,9 @@
       <li class="nav-item active">
         <a class="nav-link" href="{{ url_for('get_artists') }}">Home <span class="sr-only">(current)</span></a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="{{ url_for('all_artists') }}">All artists <span class="sr-only"></span></a>
+      </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Are you an artist?
