--- a/templates/edit-profile.html
+++ b/templates/edit-profile.html
@@ -6,224 +6,246 @@ Edit {{ username }}'s profile
 
 {% block content %}
 <div class="container">
-<h4 class="flash">
-Edit your profile
-</h4>
+    <h4 class="flash">
+        Edit your profile
+    </h4>
     <div class="container profile-container">
-        
-<form class="add-profile needs-validation" action="{{ url_for('edit_profile', username=session['user']) }}" method="POST" novalidate>
-    <div class="form-group scroll">
-      <label for="artist_name"><i class="fa fa-user form-icon-profile"></i> Your Name</label>
-      <input type="text" class="form-control" id="artist_name" name="artist_name" value="{{ artist.artist_name }}" pattern="^[a-zA-Z]{3,30}$">
-      <div class="valid-feedback feedback">
+
+        <form class="add-profile needs-validation" action="{{ url_for('edit_profile', username=session['user']) }}"
+            method="POST" novalidate>
+            <div class="form-group scroll">
+                <label for="artist_name"><i class="fa fa-user form-icon-profile"></i> Your Name</label>
+                <input type="text" class="form-control" id="artist_name" name="artist_name"
+                    value="{{ artist.artist_name }}" pattern="^[a-zA-Z ]{3,30}$">
+                <div class="valid-feedback feedback">
+                    Great!
+                </div>
+                <div class="invalid-feedback feedback">
+                    Your name should have only letters and a length between 3 and 30 chars.
+                </div>
+            </div>
+
+            <div class="form-group scroll">
+                <label for="address"><i class="fas fa-map-marked-alt"></i> Address</label>
+                <input type="text" class="form-control" id="address" name="address" value="{{ artist.address }}">
+                <div class="valid-feedback feedback">
+                    Great!
+                </div>
+                <div class="invalid-feedback feedback">
+                    Please enter a valid address format.
+                </div>
+            </div>
+
+            <div class="form-row">
+
+                <div class="form-group col-md-6 scroll">
+                    <label for="city"><i class="fas fa-city"></i> City</label>
+                    <input type="text" class="form-control" id="city" name="city" value="{{ artist.city }}">
+                    <div class="valid-feedback feedback">
                         Great!
                     </div>
                     <div class="invalid-feedback feedback">
-                        Your name should have only letters and a length between 3 and 30 chars.
+                        Please enter a valid name.
                     </div>
-    </div>
+                </div>
 
-    <div class="form-group scroll">
-     <label for="address"><i class="fas fa-map-marked-alt"></i> Address</label>
-     <input type="text" class="form-control" id="address" name="address" value="{{ artist.address }}">
-     <div class="valid-feedback feedback">
+                <div class="form-group col-md-6 scroll">
+                    <label for="country"><i class="fas fa-globe"></i> Country/State</label>
+                    <input type="text" class="form-control" id="country" name="country" value="{{ artist.country }}">
+                    <div class="valid-feedback feedback">
                         Great!
                     </div>
                     <div class="invalid-feedback feedback">
-                        Please enter a valid address format.
+                        Please enter a valid name.
                     </div>
-    </div>
+                </div>
+            </div>
 
-  <div class="form-group scroll">
-    <label for="city"><i class="fas fa-city"></i> City</label>
-    <input type="text" class="form-control" id="city" name="city" value="{{ artist.city }}">
-    <div class="valid-feedback feedback">
-                        Great!
-                    </div>
-                    <div class="invalid-feedback feedback">
-                        Please enter a name.
-                    </div>
-  </div>
+            <div class="form-row">
 
-  <div class="form-row">
-
-    <div class="form-group col-md-6 scroll">
-      <label for="phone"><i class="fas fa-phone"></i> Phone</label>
-      <input type="tel" class="form-control" id="phone" name="phone" value="{{ artist.phone }}">
-      <div class="valid-feedback feedback">
+                <div class="form-group col-md-6 scroll">
+                    <label for="phone"><i class="fas fa-phone"></i> Phone</label>
+                    <input type="tel" class="form-control" id="phone" name="phone" value="{{ artist.phone }}">
+                    <div class="valid-feedback feedback">
                         Great!
                     </div>
                     <div class="invalid-feedback feedback">
                         Please enter a valid phone number format.
                     </div>
-    </div>
+                </div>
 
-    <div class="form-group col-md-6 scroll">
-      <label for="email"><i class="fas fa-at"></i> Email</label>
-      <input type="email" class="form-control" id="email" name="email" value="{{ artist.email }}">
-      <div class="valid-feedback feedback">
+                <div class="form-group col-md-6 scroll">
+                    <label for="email"><i class="fas fa-at"></i> Email</label>
+                    <input type="email" class="form-control" id="email" name="email" value="{{ artist.email }}">
+                    <div class="valid-feedback feedback">
                         Great!
                     </div>
                     <div class="invalid-feedback feedback">
                         Please enter a valid email format.
                     </div>
-    </div>
+                </div>
 
-  </div>
+            </div>
 
-  <div class="form-row">
+            <div class="form-row">
 
-    <div class="form-group col-md-6 scroll">
-      <label for="facebook"><i class="fab fa-facebook"></i> Facebook</label>
-      <input type="url" class="form-control" id="facebook" name="facebook" value="{{ artist.facebook }}">
-      <div class="valid-feedback feedback">
+                <div class="form-group col-md-6 scroll">
+                    <label for="facebook"><i class="fab fa-facebook"></i> Facebook</label>
+                    <input type="url" class="form-control" id="facebook" name="facebook" value="{{ artist.facebook }}">
+                    <div class="valid-feedback feedback">
                         Great!
                     </div>
                     <div class="invalid-feedback feedback">
                         Please enter a valid url.
                     </div>
-    </div>
+                </div>
 
-    <div class="form-group col-md-6 scroll">
-      <label for="instagram"><i class="fab fa-instagram-square"></i> Instagram</label>
-      <input type="url" class="form-control" id="instagram" name="instagram" value="{{ artist.instagram }}">
-      <div class="valid-feedback feedback">
+                <div class="form-group col-md-6 scroll">
+                    <label for="instagram"><i class="fab fa-instagram-square"></i> Instagram</label>
+                    <input type="url" class="form-control" id="instagram" name="instagram"
+                        value="{{ artist.instagram }}">
+                    <div class="valid-feedback feedback">
                         Great!
                     </div>
                     <div class="invalid-feedback feedback">
                         Please enter a valid url.
                     </div>
-    </div>
+                </div>
 
-  </div>
+            </div>
 
-  <div class="form-group scroll">
-    <label for="profile_url"><i class="fas fa-user-circle"></i> Profile picture (url)</label>
-    <input type="url" class="form-control" id="profile_url" name="profile_url" value="{{ artist.profile_url }}">
-    <div class="valid-feedback feedback">
-                        Great!
-                    </div>
-                    <div class="invalid-feedback feedback">
-                        Please enter a valid url.
-                    </div>
-  </div>
+            <div class="form-group scroll">
+                <label for="profile_url"><i class="fas fa-user-circle"></i> Profile picture (url)</label>
+                <input type="url" class="form-control" id="profile_url" name="profile_url"
+                    value="{{ artist.profile_url }}">
+                <div class="valid-feedback feedback">
+                    Great!
+                </div>
+                <div class="invalid-feedback feedback">
+                    Please enter a valid url.
+                </div>
+            </div>
 
-  <div class="form-row">
+            <div class="form-row">
 
-    <div class="form-group col-md-6 scroll">
-      <label for="languages"><i class="fas fa-globe-europe"></i> Languages spoken</label>
-      <input type="text" class="form-control" id="languages" name="languages" value="{{ artist.languages }}">
-      <div class="valid-feedback feedback">
+                <div class="form-group col-md-6 scroll">
+                    <label for="languages"><i class="fas fa-globe-europe"></i> Languages spoken</label>
+                    <input type="text" class="form-control" id="languages" name="languages"
+                        value="{{ artist.languages }}">
+                    <div class="valid-feedback feedback">
                         Great!
                     </div>
                     <div class="invalid-feedback feedback">
                         Please enter a valid text field.
                     </div>
-    </div>
+                </div>
 
-    <div class="form-group col-md-6 scroll">
-      <label for="style"><i class="fas fa-star"></i> Tattoo style(s)</label>
-      <input type="text" class="form-control" id="style" name="style" value="{{ artist.style }}">
-      <div class="valid-feedback feedback">
+                <div class="form-group col-md-6 scroll">
+                    <label for="style"><i class="fas fa-star"></i> Tattoo style(s)</label>
+                    <input type="text" class="form-control" id="style" name="style" value="{{ artist.style }}">
+                    <div class="valid-feedback feedback">
                         Great!
                     </div>
                     <div class="invalid-feedback feedback">
                         Please enter a valid text field.
                     </div>
+                </div>
+            </div>
+
+            <div class="form-group scroll">
+                <label for="bio"><i class="fas fa-book"></i> Biography</label>
+                <textarea class="form-control" id="bio" name="bio" rows="10"> {{ artist.bio }} </textarea>
+                <div class="valid-feedback feedback">
+                    Great!
+                </div>
+                <div class="invalid-feedback feedback">
+                    Please enter a valid text.
+                </div>
+            </div>
+            <br>
+            <br>
+            <p class="text-form text-upload">Now add some beautiful images to show your best art works.
+                Upload them on a hoisting server and provide the links.</p>
+
+            <div class="form-group scroll">
+                <label for="photo_1"><i class="far fa-image"></i> Image 1 (url)</label>
+                <input type="url" class="form-control" id="photo_1" name="photo_1" value="{{ artist.photo_1 }}">
+                <div class="valid-feedback feedback">
+                    Great!
+                </div>
+                <div class="invalid-feedback feedback">
+                    Please enter a valid url.
+                </div>
+            </div>
+
+            <div class="form-group scroll">
+                <label for="photo_2"><i class="far fa-image"></i> Image 2 (url)</label>
+                <input type="url" class="form-control" id="photo_2" name="photo_2" value="{{ artist.photo_2 }}">
+                <div class="valid-feedback feedback">
+                    Great!
+                </div>
+                <div class="invalid-feedback feedback">
+                    Please enter a valid url.
+                </div>
+            </div>
+
+            <div class="form-group scroll">
+                <label for="photo_3"><i class="far fa-image"></i> Image 3 (url)</label>
+                <input type="url" class="form-control" id="photo_3" name="photo_3" value="{{ artist.photo_3 }}">
+                <div class="valid-feedback feedback">
+                    Great!
+                </div>
+                <div class="invalid-feedback feedback">
+                    Please enter a valid url.
+                </div>
+            </div>
+
+            <div class="form-group scroll">
+                <label for="photo_4"><i class="far fa-image"></i> Image 4 (url)</label>
+                <input type="url" class="form-control" id="photo_4" name="photo_4" value="{{ artist.photo_4 }}">
+                <div class="valid-feedback feedback">
+                    Great!
+                </div>
+                <div class="invalid-feedback feedback">
+                    Please enter a valid url.
+                </div>
+            </div>
+
+            <div class="form-group scroll">
+                <label for="photo_5"><i class="far fa-image"></i> Image 5 (url)</label>
+                <input type="url" class="form-control" id="photo_5" name="photo_5" value="{{ artist.photo_5 }}">
+                <div class="valid-feedback feedback">
+                    Great!
+                </div>
+                <div class="invalid-feedback feedback">
+                    Please enter a valid url.
+                </div>
+            </div>
+
+            <div class="form-group scroll">
+                <label for="photo_6"><i class="far fa-image"></i> Image 6 (url)</label>
+                <input type="url" class="form-control" id="photo_6" name="photo_6" value="{{ artist.photo_6 }}">
+                <div class="valid-feedback feedback">
+                    Great!
+                </div>
+                <div class="invalid-feedback feedback">
+                    Please enter a valid url.
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-12 center">
+                    <button type="submit" class="btn btn-light btn-lg btn-form">Save <i
+                            class="fas fa-cloud-upload-alt"></i></button>
+                    <button type="button" class="btn btn-light btn-lg btn-form"
+                        href="{{ url_for('profile', username=session['user']) }}" onclick="back()">Cancel <i
+                            class="fas fa-backspace"></i></button>
+                </div>
+            </div>
+        </form>
+
+
     </div>
-     </div>
 
-    <div class="form-group scroll">
-        <label for="bio"><i class="fas fa-book"></i> Biography</label>
-        <textarea class="form-control" id="bio" name="bio" rows="10"> {{ artist.bio }} </textarea>
-        <div class="valid-feedback feedback">
-                        Great!
-                    </div>
-                    <div class="invalid-feedback feedback">
-                        Please enter a valid text.
-                    </div>
-    </div>
-    <br>
-    <br>
-    <p class="text-form text-upload">Now add some beautiful images to show your best art works.
-    Upload them on a hoisting server and provide the links.</p>
-
-    <div class="form-group scroll">
-        <label for="photo_1"><i class="far fa-image"></i> Image 1 (url)</label>
-        <input type="url" class="form-control" id="photo_1" name="photo_1" value="{{ artist.photo_1 }}">
-        <div class="valid-feedback feedback">
-                        Great!
-                    </div>
-                    <div class="invalid-feedback feedback">
-                        Please enter a valid url.
-                    </div>
-    </div>
-
-    <div class="form-group scroll">
-        <label for="photo_2"><i class="far fa-image"></i> Image 2 (url)</label>
-        <input type="url" class="form-control" id="photo_2" name="photo_2" value="{{ artist.photo_2 }}">
-        <div class="valid-feedback feedback">
-                        Great!
-                    </div>
-                    <div class="invalid-feedback feedback">
-                        Please enter a valid url.
-                    </div>
-    </div>
-
-    <div class="form-group scroll">
-        <label for="photo_3"><i class="far fa-image"></i> Image 3 (url)</label>
-        <input type="url" class="form-control" id="photo_3" name="photo_3" value="{{ artist.photo_3 }}">
-        <div class="valid-feedback feedback">
-                        Great!
-                    </div>
-                    <div class="invalid-feedback feedback">
-                        Please enter a valid url.
-                    </div>
-    </div>
-
-    <div class="form-group scroll">
-        <label for="photo_4"><i class="far fa-image"></i> Image 4 (url)</label>
-        <input type="url" class="form-control" id="photo_4" name="photo_4" value="{{ artist.photo_4 }}">
-        <div class="valid-feedback feedback">
-                        Great!
-                    </div>
-                    <div class="invalid-feedback feedback">
-                        Please enter a valid url.
-                    </div>
-    </div>
-
-    <div class="form-group scroll">
-        <label for="photo_5"><i class="far fa-image"></i> Image 5 (url)</label>
-        <input type="url" class="form-control" id="photo_5" name="photo_5" value="{{ artist.photo_5 }}">
-        <div class="valid-feedback feedback">
-                        Great!
-                    </div>
-                    <div class="invalid-feedback feedback">
-                        Please enter a valid url.
-                    </div>
-    </div>
-
-    <div class="form-group scroll">
-        <label for="photo_6"><i class="far fa-image"></i> Image 6 (url)</label>
-        <input type="url" class="form-control" id="photo_6" name="photo_6" value="{{ artist.photo_6 }}">
-        <div class="valid-feedback feedback">
-                        Great!
-                    </div>
-                    <div class="invalid-feedback feedback">
-                        Please enter a valid url.
-                    </div>
-    </div>
-
-<div class="row">
-<div class="col-sm-12 center">
-<button type="submit" class="btn btn-light btn-lg btn-form">Save <i class="fas fa-cloud-upload-alt"></i></button>
-<button type="button" class="btn btn-light btn-lg btn-form" href="{{ url_for('profile', username=session['user']) }}" onclick="back()">Cancel <i class="fas fa-backspace"></i></button>
-</div>
-</div>
-  </form>
-
-
-    </div>
-	
 </div>
 {% endblock %}
