Added blocks to set active class in menu links

--- a/templates/all-artists.html
+++ b/templates/all-artists.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
+{% set active_page = "all_artists" %}
 
 {% block title %}
 All the Artists
+{% endblock %}
+
+{% block all_artists %}
+active
 {% endblock %}
 
 {% block content %}
