--- a/templates/edit-profile.html
+++ b/templates/edit-profile.html
@@ -4,6 +4,10 @@
 Edit {{ username }}'s profile
 {% endblock %}
 
+{% block edit %}
+active
+{% endblock %}
+
 {% block content %}
 <div class="container">
     <h4 class="flash">
