--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,10 @@
 Login to Get My Tattoo
 {% endblock %}
 
+{% block login %}
+active
+{% endblock %}
+
 {% block content %}
 <div class="container background-image">
     <div class="row">
