--- a/templates/register.html
+++ b/templates/register.html
@@ -4,6 +4,10 @@
 Register to Get My Tattoo
 {% endblock %}
 
+{% block register %}
+active
+{% endblock %}
+
 {% block content %}
 <div class="container background-image">
     <div class="row">
