--- a/templates/base.html
+++ b/templates/base.html
@@ -22,10 +22,10 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
-      <li class="nav-item active">
+      <li class="nav-item {% block get_artists %}{% endblock %}">
         <a class="nav-link" href="{{ url_for('get_artists') }}">Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item {% block all_artists %}{% endblock %}">
         <a class="nav-link" href="{{ url_for('all_artists') }}">All artists <span class="sr-only"></span></a>
       </li>
       <li class="nav-item dropdown">
@@ -33,11 +33,11 @@
           Are you an artist?
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="{{ url_for('register') }}">Register</a>
-          <a class="dropdown-item" href="{{ url_for('login') }}">Log In</a>
+          <a class="dropdown-item {% block register %}{% endblock %}" href="{{ url_for('register') }}">Register</a>
+          <a class="dropdown-item {% block login %}{% endblock %}" href="{{ url_for('login') }}">Log In</a>
           {% if session.user %}
-            <a class="dropdown-item" href="{{ url_for('profile', username=session['user']) }}">My Profile</a>
-            <a class="dropdown-item" href="{{ url_for('edit_profile', username=session['user']) }}">Edit Profile</a>
+            <a class="dropdown-item {% block profile %}{% endblock %}" href="{{ url_for('profile', username=session['user']) }}">My Profile</a>
+            <a class="dropdown-item {% block edit %}{% endblock %}" href="{{ url_for('edit_profile', username=session['user']) }}">Edit Profile</a>
             <a class="dropdown-item" href="{{ url_for('logout') }}">Log Out</a>
           {% endif %}
         </div>
